feat: improve site styling and social media integration
- Add responsive text alignment for article content
- Fix dark mode table border visibility
- Enhance social share buttons with label and styling
- Optimize social icons (note.svg, zenn.svg) for better rendering
- Add Note and Zenn to author social links
- Reorganize footer menu to use icon-based social links
- Add LinkedIn and Mastodon to article sharing options
- Improve footer navigation layout and spacing

--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -22,6 +22,8 @@ ja:
         - github: "https://github.com/rewse"
         - instagram: "https://www.instagram.com/rewse/"
         - linkedin: "https://www.linkedin.com/in/rewse/"
+        - note: "https://note.com/rewse"
         - reddit: "https://www.reddit.com/user/rewselab/"
         - threads: "https://www.threads.net/@rewse"
         - x-twitter: "https://x.com/rewse"
+        - zenn: "https://zenn.dev/rewse"
