refactor: reorganize about page structure and improve navigation
- Move about page from root to pages directory for better organization
- Update menu configuration to use pageRef instead of hardcoded URL
- Add featured image for about page
- Configure page display settings (hide author, date, pagination, related content)
- Minor formatting improvements to work experience section

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,7 +7,7 @@ main:
     weight: 10
 
   - name: "About"
-    url: "/blog/about-tats-shibata/"
+    pageRef: "pages/about-tats-shibata/"
     weight: 20
 
   - name: "Uses"
