refactor: reorganize uses page and update equipment information
- Move uses page from root to pages directory for better organization
- Update menu configuration to use pageRef instead of hardcoded URL
- Add featured image and content images for better visual presentation
- Configure page display settings (hide date, pagination, related content)
- Update equipment information:
  - Replace BenQ SW271 monitor with ASUS ProArt Display 6K PA32QCV
  - Add Levoit Vital 100S Pet air purifier
  - Update Home Assistant setup and IoT device counts
  - Reorganize lighting and sensor configurations
- Convert image references to Hugo figure shortcodes for better formatting

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     weight: 20
 
   - name: "Uses"
-    url: "/blog/uses"
+    pageRef: "pages/uses"
     weight: 30
 
   - name: "External"
