feat: add Amazon affiliate shortcode system with fallback support
- Add Amazon shortcode with clean design and fallback for missing images
- Configure Amazon affiliate ID in Hugo params
- Replace all Pochipp shortcodes with Amazon shortcodes across 49 posts
- Add automated scripts for Pochipp data extraction and shortcode replacement
- Include responsive design and dark mode support for Amazon widgets
- Handle 1x1 pixel placeholder images with graceful fallback display

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -138,3 +138,6 @@ term:
 verification:
   bing: "F77F72F7425A0CE9947840EAD4851F82"
   google: "ft9l3rqntuPQk8HsKt3SAzcO7pSyuAritwp160kIIOM"
+
+# Amazon Affiliate Settings
+amazonJpAffiliate: "eih4uh06-22"
