refactor(config): simplify social menu structure
- Remove identifier and pre fields from social menu items
- Add explicit name fields for better readability
- Maintain all existing social media links

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -27,36 +27,28 @@ main:
 
   - name: "Social"
     weight: 50
-  - identifier: "bluesky"
-    pre: "bluesky"
+  - name: "Bluesky"
     parent: "Social"
     url: "https://bsky.app/profile/rewse.jp"
-  - identifier: "facebook"
-    pre: "facebook"
+  - name: "Facebook"
     parent: "Social"
     url: "https://www.facebook.com/rewse"
-  - identifier: "github"
-    pre: "github"
+  - name: "GitHub"
     parent: "Social"
     url: "https://github.com/rewse"
-  - identifier: "instagram"
-    pre: "instagram"
+  - name: "Instagram"
     parent: "Social"
     url: "https://www.instagram.com/rewse/"
-  - identifier: "linkedin"
-    pre: "linkedin"
+  - name: "LinkedIn"
     parent: "Social"
     url: "https://www.linkedin.com/in/rewse/"
-  - identifier: "reddit"
-    pre: "reddit"
+  - name: "Reddit"
     parent: "Social"
     url: "https://www.reddit.com/user/rewselab/"
-  - identifier: "threads"
-    pre: "threads"
+  - name: "Threads"
     parent: "Social"
     url: "https://www.threads.net/@rewse"
-  - identifier: "x-twitter"
-    pre: "x-twitter"
+  - name: "X"
     parent: "Social"
     url: "https://x.com/rewse"
 
