--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -9,7 +9,7 @@ colorScheme: "one-light"
 defaultAppearance: "light" # valid options: light or dark
 autoSwitchAppearance: true
 
-enableA11y: true
+enableA11y: false
 enableSearch: true
 enableCodeCopy: true
 enableStructuredBreadcrumbs: true
