feat: add new technical articles and update featured image config
Add 5 new technical articles:
- Kiro CLI getting started guide
- Kiro Power creation guide with Home Assistant example
- Zenn writing efficiency improvement with Kiro
- macOS Tahoe Time Machine NAS backup fix
- Synology NAS btrfs metadata space issue resolution

Also update default featured image path from fireflies.svg to featured.svg

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -27,7 +27,7 @@ disableImageOptimizationMD: false
 disableTextInHeader: false
 
 defaultBackgroundImage: "/img/background.svg"
-defaultFeaturedImage: "/img/fireflies.svg"
+defaultFeaturedImage: "/img/featured.svg"
 defaultSocialImage: "/img/rewse-lab-featured-image.png"
 hotlinkFeatureImage: false
 
