fix: Update baseURL for Amplify deployment

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,7 +3,7 @@
 # https://blowfish.page/docs/getting-started/
 
 theme: "blowfish"
-baseURL: "http://localhost:1313/blog/"
+baseURL: "https://main.d8gzy6xdskncg.amplifyapp.com/"
 defaultContentLanguage: "ja"
 disableLanguages: [] # to allow translation work requiring shipping to production
 
