--- a/amplify.yml
+++ b/amplify.yml
@@ -3,6 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
+        - git submodule update --init --recursive
         - curl -L -o hugo.tar.gz https://github.com/gohugoio/hugo/releases/download/v0.154.2/hugo_extended_0.154.2_Linux-64bit.tar.gz
         - tar -xf hugo.tar.gz hugo
         - mv hugo /usr/local/bin/
