--- a/amplify.yml
+++ b/amplify.yml
@@ -6,11 +6,13 @@ frontend:
         - git submodule update --init --recursive
         - curl -L -o hugo.tar.gz https://github.com/gohugoio/hugo/releases/download/v0.154.2/hugo_extended_0.154.2_Linux-64bit.tar.gz
         - tar -xf hugo.tar.gz hugo
-        - mv hugo /usr/local/bin/
-        - hugo version
+        - chmod +x hugo
+        - export PATH=$PWD:$PATH
+        - ./hugo version
     build:
       commands:
-        - hugo --gc --minify
+        - export PATH=$PWD:$PATH
+        - ./hugo --gc --minify
   artifacts:
     baseDirectory: public
     files:
