feat: add 5-minute timeout to Hugo build configuration
- Set timeout to 5m to prevent build timeouts for large sites

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -7,6 +7,8 @@ baseURL: "https://rewse.jp/blog/"
 defaultContentLanguage: "ja"
 disableLanguages: [] # to allow translation work requiring shipping to production
 
+timeout: "5m"
+
 # pluralizeListTitles: true # hugo function useful for non-english languages
 
 enableRobotsTXT: true
