--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,7 +3,7 @@
 # https://blowfish.page/docs/getting-started/
 
 theme: "blowfish"
-baseURL: "https://rewse.jp/blog/"
+baseURL: "https://blog.rewse.jp/"
 defaultContentLanguage: "ja"
 disableLanguages: [] # to allow translation work requiring shipping to production
 
