style: improve author section and social sharing layout
- Move author section styling from #single_header to generic .author class
- Add bottom author display configuration (showAuthorBottom: true)
- Enhance social sharing buttons layout with proper width constraints
- Add support for multiple social sharing section selectors
- Remove specific sharing links configuration to use theme defaults
- Improve responsive design for author and social sections

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -66,6 +66,7 @@ article:
   showDateOnlyInArticle: false
   showDateUpdated: false
   showAuthor: true
+  showAuthorBottom: true
   showHero: true
   heroStyle: "big" # valid options: basic, big, background, thumbAndBackground
   layoutBackgroundBlur: true # only used when heroStyle equals background
@@ -86,13 +87,6 @@ article:
   showTaxonomies: true
   showAuthorsBadges: true
   showWordCount: false
-  sharingLinks:
-    - "bluesky"
-    - "facebook"
-    - "line"
-    - "linkedin"
-    - "mastodon"
-    - "twitter"
   showZenMode: true
 
 list:
