docs: clarify disclaimer in author bio

--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -16,7 +16,7 @@ ja:
     author:
       name: "Tats Shibata"
       image: "/img/tats-bw-1x1.jpg"
-      bio: "シバタツ（柴田竜典）はデータベーステクノロジー、パフォーマンスエンジニアリング、プリセールスにおいて20年以上の経験を持ちます。アマゾンウェブサービスジャパンの本部長 / Head of Japan Data Solutions Architecture として、彼はデータベースとアナリティクスの技術エキスパートからなるチームを率い、様々な業界のAWSカスタマーにソリューションを提供しています。発言は個人の見解です"
+      bio: "シバタツ（柴田竜典）はデータベーステクノロジー、パフォーマンスエンジニアリング、プリセールスにおいて20年以上の経験を持ちます。アマゾンウェブサービスジャパンの本部長 / Head of Japan Data Solutions Architecture として、彼はデータベースとアナリティクスの技術エキスパートからなるチームを率い、様々な業界のAWSカスタマーにソリューションを提供しています。本記事での発言は個人の見解です"
       links:
         - bluesky: "https://bsky.app/profile/rewse.jp"
         - facebook: "https://www.facebook.com/rewse"
