feat(i18n): update footer and error page translations
- Change copyright link from markdown to HTML with hover styling
- Update 404 error page title and description
- Add AWS Amplify credit to powered_by footer text

--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -11,7 +11,7 @@ ja:
     dateFormat: "2006-01-02"
     logo: "/img/rewse-lab-logo-clear.png"
     description: "Database Technical Expert Blog"
-    copyright: "© { year } Tats Shibata. This work is licensed under [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/)."
+    copyright: '© { year } Tats Shibata. This work is licensed under <a class="hover:underline hover:decoration-primary-400 hover:text-primary-500" href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>'
 
     author:
       name: "Tats Shibata"
