refactor: standardize Amazon affiliate parameter naming
- Change amazonJpAffiliate to amazonJPAffiliate in params.yaml
- Update shortcode template to use consistent parameter name
- Improve naming consistency across configuration and templates

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -133,4 +133,4 @@ verification:
   bing: "F77F72F7425A0CE9947840EAD4851F82"
   google: "ft9l3rqntuPQk8HsKt3SAzcO7pSyuAritwp160kIIOM"
 
-amazonJpAffiliate: "eih4uh06-22"
+amazonJPAffiliate: "eih4uh06-22"
