feat: implement comprehensive WebP image support
- Add WebP support for article featured images (hero/big.html)
- Add WebP support for homepage hero images (home/hero.html)
- Add WebP support for article card thumbnails (card.html)
- Add WebP support for related article cards (card-related.html)
- Add WebP support for figure shortcode images (figure.html)
- Add WebP support for markdown images (render-image.html)
- Update CSS selectors for picture tag compatibility (custom.css)
- Configure Hugo imaging settings with WebP/JPG/PNG formats (hugo.yaml)

All images now use picture tags with WebP sources and JPG fallbacks,
providing ~60% file size reduction while maintaining compatibility.

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -27,6 +27,15 @@ pagination:
 
 imaging:
   anchor: "Center"
+  quality: 85
+  resampleFilter: "Lanczos"
+  formats:
+    - "jpg"
+    - "png"
+    - "webp"
+  exif:
+    includeFields: ""
+    excludeFields: "GPS|Exif"
 
 taxonomies:
   tag: "tags"
