config: increase Hugo build timeout to 1 hour
Extend timeout from 5 minutes to 1 hour to accommodate longer build times
when processing large numbers of images with AVIF/WebP conversion.

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -7,7 +7,7 @@ baseURL: "https://blog.rewse.jp/"
 defaultContentLanguage: "ja"
 disableLanguages: [] # to allow translation work requiring shipping to production
 
-timeout: "5m"
+timeout: "1h"
 
 # pluralizeListTitles: true # hugo function useful for non-english languages
 
