perf(layouts): implement responsive images with srcset
- Add srcset with w descriptor for card, card-related, hero, and term-link layouts
- Generate multiple image sizes (400w/800w for cards, 1200w/2400w for hero)
- Skip resizing for images smaller than target width
- Disable image processing for unused background and card home layouts
- Update figure shortcode with dynamic srcset generation
- Add disableImageOptimization param support

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -26,6 +26,8 @@ disableImageOptimization: false
 disableImageOptimizationMD: false
 disableTextInHeader: false
 
+backgroundImageWidth: 2400
+
 defaultBackgroundImage: "/img/background.svg"
 defaultFeaturedImage: "/img/featured.svg"
 defaultSocialImage: "/img/rewse-lab-featured-image.png"
