feat(build): add image optimization to Amplify build with caching
- Add optimized images directory to .gitignore (generated at build time)
- Install libvips and uv in Amplify preBuild phase
- Run image optimization with retry loop (max 3 attempts)
- Cache optimized images between builds for incremental processing
- Return proper exit codes from optimize_images.py for retry logic

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /assets/jsconfig.json
 hugo_stats.json
 
+# Optimized images (generated at build time)
+/static/img/optimized/
+
 # Temporary lock file which is used to track Hugo dependency information
 .hugo_build.lock
 
