--- a/amplify.yml
+++ b/amplify.yml
@@ -9,11 +9,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - echo "Installing dependencies..."
-        - apt-get update
-        - apt-get install -y curl git libvips-dev libvips-tools python3 python3-pip
-
-        - echo "Creating directory for user-specific executable files..."
+        - echo "Creating directory for Hugo..."
         - mkdir -p "${HOME}/.local/hugo"
 
         - echo "Installing Hugo ${HUGO_VERSION}..."
@@ -21,10 +17,6 @@ frontend:
         - tar -C "${HOME}/.local/hugo" -xf "hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
         - rm "hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
         - export PATH="${HOME}/.local/hugo:${PATH}"
-
-        - echo "Installing uv..."
-        - curl -LsSf https://astral.sh/uv/install.sh | sh
-        - export PATH="${HOME}/.local/bin:${PATH}"
 
         - echo "Verifying installations..."
         - echo "Hugo:" $(hugo version)
