build: track image optimization manifest in git
- Add .manifest.json exception to .gitignore for incremental builds
- Add Amplify build log retrieval instructions to tech.md
- Include .manifest.json to enable build cache on Amplify

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 hugo_stats.json
 
 # Optimized images (generated at build time)
-/static/img/optimized/
+/static/img/optimized/*
+!/static/img/optimized/.manifest.json
 
 # Temporary lock file which is used to track Hugo dependency information
 .hugo_build.lock
