fix: remove manifest from git and rely on Amplify cache
- Remove .manifest.json from git tracking
- Revert .gitignore to ignore entire /static/img/optimized/ directory
- Let Amplify cache handle both manifest and optimized images
- First build will generate all images, subsequent builds will use cache

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@
 hugo_stats.json
 
 # Optimized images (generated at build time)
-/static/img/optimized/*
-!/static/img/optimized/.manifest.json
+/static/img/optimized/
 
 # Temporary lock file which is used to track Hugo dependency information
 .hugo_build.lock
