--- a/amplify.yml
+++ b/amplify.yml
@@ -16,27 +16,27 @@ frontend:
         - curl -sLJO "https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
         - tar -C "${HOME}/.local/hugo" -xf "hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
         - rm "hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
-        - export PATH="${HOME}/.local/hugo:${PATH}"
+        - 'export PATH="${HOME}/.local/hugo:${PATH}"'
 
         - echo "Verifying installations..."
-        - echo "Hugo:" $(hugo version)
-        - echo "uv:" $(uv --version)
-        - echo "vips:" $(vips --version)
+        - echo "Hugo ->" $(hugo version)
+        - echo "uv ->" $(uv --version)
+        - echo "vips ->" $(vips --version)
         
         - echo "Checking AVIF support..."
-        - echo "libheif version:" $(pkg-config --modversion libheif 2>/dev/null || echo "not found")
-        - echo "rav1e available:" $(which rav1e || echo "not found")
-        - echo "librav1e0 installed:" $(dpkg -l | grep librav1e0 || echo "not found")
-        - echo "vips formats:" $(vips -l | grep -E "(heif|avif)" || echo "no HEIF/AVIF support found")
+        - echo "libheif version ->" $(pkg-config --modversion libheif 2>/dev/null || echo "not found")
+        - echo "rav1e available ->" $(which rav1e || echo "not found")
+        - echo "librav1e0 installed ->" $(dpkg -l | grep librav1e0 || echo "not found")
+        - echo "vips formats ->" $(vips -l | grep -E "(heif|avif)" || echo "no HEIF/AVIF support found")
 
         - echo "Checking cache status before image optimization..."
-        - echo "PWD: ${PWD}"
-        - echo "OPTIMIZED_IMAGES_DIR: ${OPTIMIZED_IMAGES_DIR}"
-        - echo "Contents of static/img/optimized/:"
+        - echo "PWD ->" ${PWD}
+        - echo "OPTIMIZED_IMAGES_DIR ->" ${OPTIMIZED_IMAGES_DIR}
+        - echo "Contents of static/img/optimized/ ->"
         - ls -la static/img/optimized/ || echo "Directory does not exist"
-        - echo "Looking for manifest file:"
+        - echo "Looking for manifest file ->"
         - ls -la static/img/optimized/.manifest.json || echo "Manifest file not found"
-        - echo "Total files in optimized directory:"
+        - echo "Total files in optimized directory ->"
         - find static/img/optimized/ -type f | wc -l || echo "0"
 
         - echo "Running image optimization (incremental with retry)..."
