--- a/amplify.yml
+++ b/amplify.yml
@@ -55,7 +55,10 @@ frontend:
       commands:
         - echo "Building site..."
         - hugo --gc --minify
+        - echo "Contents of ${HUGO_CACHEDIR}/ after build ->"
+        - ls -la ${HUGO_CACHEDIR}/ || echo "Directory is empty"
         - echo "Saving Hugo cache to store..."
+        - mkdir -p ${HUGO_CACHE_STORE}
         - cp -a ${HUGO_CACHEDIR}/* ${HUGO_CACHE_STORE}/ 2>/dev/null || echo "No cache to save"
         - echo "Contents of ${HUGO_CACHE_STORE}/ after save ->"
         - ls -la ${HUGO_CACHE_STORE}/ || echo "Directory is empty"
@@ -65,5 +68,4 @@ frontend:
       - '**/*'
   cache:
     paths:
-      - hugo-cache
       - static/img/optimized
