build: disable clean_optimized_images.sh for incremental builds
Hash-based image migration is complete. Comment out the cleanup script
to restore incremental build behavior and reduce build time.

--- a/amplify.yml
+++ b/amplify.yml
@@ -36,7 +36,7 @@ frontend:
         - find ${OPTIMIZED_IMAGES_DIR}/ -type f | wc -l || echo "0"
 
         - echo "Running image optimization..."
-        - bash scripts/clean_optimized_images.sh
+        # - bash scripts/clean_optimized_images.sh
         - uv run --with pyvips scripts/optimize_images.py || uv run --with pyvips scripts/optimize_images.py
     build:
       commands:
